gitops/platform-apps/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.__ZONE_NAME__`)
      services:
        - kind: Service
          name: headlamp
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-netbird
  namespace: kube-system
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`headlamp.__ZONE_NAME__`)
      services:
        - kind: Service
          name: headlamp
          port: 80
